added versioning + GitHub Actions workflow

--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,10 @@
 \documentclass{article}
+\input{version.tex} % loads the buildversion command
+
 \begin{document}
-Hello from GitHub \& Overleaf!
-% synced from Overleaf
+
+Hello from GitHub \& Overleaf!  
+
+Version: \buildversion
+
 \end{document}
